# Ceres

./: .gitignore  CMakeLists.txt  ImagePair.hpp  LoadH5.hpp  LoggingCallback.hpp  ReprojErrInterp.hpp  ReprojError.hpp  ReprojErrorWithMotion.hpp  Track.hpp  config.h  estimate-vanilla.cpp  h5_rw.hpp  interp.cpp  main-old.cpp  main.cpp  test.cpp  utils.hpp
